# espace

./: CMakeLists.txt  asearch.cpp
Espace/: Espace.cpp  Espace.sln  Espace.vcxproj  Thread.cpp  Thread.h  WorkerQueue.cpp  WorkerQueue.h  asearch.cpp  config.json  config2.json  run_config.cpp  run_config.h  web.cpp  web.h
client/: .eslintrc  package-lock.json  package.json
client/.devcontainer/: devcontainer.json
client/src/containers/: ConfigurationContainer.js
client/src/models/: configurations.js  index.js  simulations.js
client/src/store/: configurations.js  index.js  simulations.js
client/src/web/: index.js
client/src/web/components/: Home.js
client/src/web/components/Configuration/: App-Group.js  Channel.js  ConfigurationEditor.js  Provider.js  SimulationGraphView.js
client/src/web/components/Pages/: Chart-demo.js  Data-pricing.js  Inventory.js  Provider-configuration.js  Service-procurement.js  Traffic-distribution.js  channel-demo.js  eSim.js  testData.js
client/src/web/components/Reporting/: Blockage.js  Performance.js  SlaCredits.js
client/src/web/components/Templates/: Nothing.js  Sidebar.js
client/src/web/components/UI/: AreaEcharts.js  Bar2Echarts.js  BarEcharts.js  CostGraph.js  DashGraph.js  DashGraphDown.js  DownstreamCharts.js  Footer.js  GoodputEcharts.js  Header.js  HeatEcharts.js  IncidentGraph.js  LatencyEcharts.js  LineEcharts.js  ProviderGraph.js  SankeyGraph.js  Sidebar.js  SmallGraph.js  UpstreamCharts.js  WordlMapEchart.js  jitterEcharts.js
client/src/web/routes/: index.js
client/src/web/styles/: style.scss
client/src/web/styles/components/: _dashboard.scss  _sidebar.scss
dmts/: CMakeLists.txt
dmts/Espace/: Espace.cpp  Mutex.h  ResultsDb.h  Thread.cpp  WorkerQueue.cpp  WorkerQueue.h  asearch.cpp  config.json  run_config.cpp  run_config.h  web.cpp  web.h
dmts/sandbird/example/: hello.c
dmts/sandbird/src/: sandbird.c
sandbird/example/: hello.c
sandbird/src/: sandbird.c  sandbird.h
